62-echo-server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
spec:
  ingressClassName: nginx
  rules:
    - host: "hound.d53.cz"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: echo
                port:
                  number: 80
